[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pytest-reserial"
authors = [{name = "Alexander Bessman", email = "alexander.bessman@gmail.com"}]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "pytest",
    "pyserial",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
]
keywords = [
    "serial",
    "testing",
    "logging",
    "mocking",
    "patching",
    "stubbing",
    "record",
    "replay",
]

[project.urls]
Home = "https://github.com/bessman/pytest-reserial"

[project.entry-points."pytest11"]
reserial = "pytest_reserial.reserial"

[project.optional-dependencies]
test = [
    "coverage",
]
dev = [
    "black",
    "isort",
    "mypy",
    "ruff",
    "tox",
]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",  # one-blank-line-before-class
    "D213",  # multi-line-summary-second-line
    "G004",  # logging-f-string
    "N818",  # error-suffix-on-exception-name
    "S101",  # assert
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs}/*" = ["ALL"]
